--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -4,3 +4,10 @@ header {
         font-size: 2rem;
     }
 }
+
+// create the for loop
+@for $i from 1 through 12{
+    $w: calc($i /12) *100%;
+    .medium-#{$i} {flex-basis: $w}
+    }
+    
