--- a/css/styles.css
+++ b/css/styles.css
@@ -333,21 +333,26 @@ body {
 }
 
 #headerWrapper {
-  background: rgb(126, 217, 87);
-  background: linear-gradient(60deg, rgb(0, 151, 178) 0%, rgb(126, 217, 87) 81%);
+  background: white;
   color: rgb(0, 183, 255);
 }
 
 header {
   display: flex;
   align-items: flex-end;
+  justify-content: left;
   padding: 1rem 16px;
   gap: 8px;
 }
 header h1 {
-  margin: 0;
+  margin: auto 0;
+  text-align: left;
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: 800;
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
 }
 
 /*Navigation stuff goes here*/
@@ -390,9 +395,104 @@ nav ul.open {
   display: block;
 }
 
+main img {
+  width: 100%;
+  height: auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1rem 0;
+  padding: 0 8px;
+}
+
+.column {
+  padding: 0 8px;
+  margin: 8px 0;
+}
+
+.small-1 {
+  flex-basis: 8.3333333333%;
+}
+
+.small-2 {
+  flex-basis: 16.6666666667%;
+}
+
+.small-3 {
+  flex-basis: 25%;
+}
+
+.small-4 {
+  flex-basis: 33.3333333333%;
+}
+
+.small-5 {
+  flex-basis: 41.6666666667%;
+}
+
+.small-6 {
+  flex-basis: 50%;
+}
+
+.small-7 {
+  flex-basis: 58.3333333333%;
+}
+
+.small-8 {
+  flex-basis: 66.6666666667%;
+}
+
+.small-9 {
+  flex-basis: 75%;
+}
+
+.small-10 {
+  flex-basis: 83.3333333333%;
+}
+
+.small-11 {
+  flex-basis: 91.6666666667%;
+}
+
+.small-12 {
+  flex-basis: 100%;
+}
+
+.line, .round, .fill, .shadow {
+  padding: 8px 8px;
+}
+
+.line {
+  border: 1px #1c2020 solid;
+}
+
+.round {
+  border-radius: 9px;
+}
+
+.fill {
+  background-color: #ffaeeb;
+}
+
+.shadow {
+  box-shadow: 0 0 10px #c0c0c0;
+}
+
+.left {
+  justify-content: left;
+}
+
+.center {
+  margin: auto;
+  align-items: center;
+}
+
 #footerWrapper {
-  background: rgb(126, 217, 87);
-  background: linear-gradient(60deg, rgb(0, 151, 178) 0%, rgb(126, 217, 87) 81%);
+  background-color: black;
+  color: white;
 }
 
 footer {
@@ -411,6 +511,42 @@ footer p {
   header h1 {
     font-size: 2rem;
   }
+  .medium-1 {
+    flex-basis: 8.3333333333%;
+  }
+  .medium-2 {
+    flex-basis: 16.6666666667%;
+  }
+  .medium-3 {
+    flex-basis: 25%;
+  }
+  .medium-4 {
+    flex-basis: 33.3333333333%;
+  }
+  .medium-5 {
+    flex-basis: 41.6666666667%;
+  }
+  .medium-6 {
+    flex-basis: 50%;
+  }
+  .medium-7 {
+    flex-basis: 58.3333333333%;
+  }
+  .medium-8 {
+    flex-basis: 66.6666666667%;
+  }
+  .medium-9 {
+    flex-basis: 75%;
+  }
+  .medium-10 {
+    flex-basis: 83.3333333333%;
+  }
+  .medium-11 {
+    flex-basis: 91.6666666667%;
+  }
+  .medium-12 {
+    flex-basis: 100%;
+  }
 }
 @media only screen and (min-width: 60rem) {
   header, nav, main, footer {
@@ -428,5 +564,41 @@ footer p {
   }
   Nav ul li, Nav ul.open li {
     border: none;
+  }
+  .large-1 {
+    flex-basis: 8.3333333333%;
+  }
+  .large-2 {
+    flex-basis: 16.6666666667%;
+  }
+  .large-3 {
+    flex-basis: 25%;
+  }
+  .large-4 {
+    flex-basis: 33.3333333333%;
+  }
+  .large-5 {
+    flex-basis: 41.6666666667%;
+  }
+  .large-6 {
+    flex-basis: 50%;
+  }
+  .large-7 {
+    flex-basis: 58.3333333333%;
+  }
+  .large-8 {
+    flex-basis: 66.6666666667%;
+  }
+  .large-9 {
+    flex-basis: 75%;
+  }
+  .large-10 {
+    flex-basis: 83.3333333333%;
+  }
+  .large-11 {
+    flex-basis: 91.6666666667%;
+  }
+  .large-12 {
+    flex-basis: 100%;
   }
 }
