--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $primaryColor: gray;
-$secondaryColor: rgb(0, 132, 255);
+$secondaryColor: #ffaeeb;
 $fontColor: #333;
-$menuColor: rgb(0, 132, 255);
+$menuColor: #ffaeeb;
 
 $defaultFont: 'Poppins', sans-serif;
 $lightWeight: 300;
