--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -76,7 +76,7 @@ nav {
         text-decoration: none;
         &:hover {
           background-color: darken($menuColor, 4%);
-          color: orange;
+          color: black;
         }
       }
     }
